=========
Changelog
=========

1.4.0b2 (unreleased)
====================

- Nothing changed yet.


1.4.0b1 (2016-12-13)
====================

- Support multiple platforms per environment (#12405).

- added --reset switch to batou

- Added a way to customize how supervisor is started on different platforms via `start()` on a Service platform component.

1.3.5 (2016-12-06)
==================

- Fix installation of batou egg with recend setuptools version (#25089)


1.3.4 (2016-11-25)
==================

- Fix for "make virtualenv files writable" (#24427)


1.3.3 (2016-11-25)
==================

- Git: Clean workingcopy before merging changes.


1.3.2 (2016-11-02)
==================

- Make virtualenv files writable before delete. On systems like NixOS the files
  copied by virtualenv are read-only, hence `rm -rf` cannot remove them (#24427)


1.3.1 (2016-10-13)
==================

- Bug fix: Don't update virtualenv on each run. (#23983)


1.3.0 (2016-09-12)
==================

- Update virtualenv when the Python version changes (#22805)

- Remove support for virtualenv with Python 2.4, 2.5 and 3.2.

- Add way to set arbitrary environment variables in crontab.

- Fix performance issue with git and mercurial Clone components.


1.3b3 (2016-05-30)
==================

- Fix a crash in case of GnuPG2 is not installed at all.


1.3b2 (2016-05-27)
==================

- Parallelize connect to remote hosts and bootstrapping of remote batou via
  `./batou deploy`.

- Support remote host/port for MySQL commands.

- Copy virtualenv files instead of symlinking (for Python 2.7 and up).
  Symlinking breaks especially on NixOS since the symlinks point directly to
  the store.

- Hide passwords from output of the `Download` component.

- Add `dependencies` to `supervisor.Program`.

- Fix disconnect error in consistency check.

- Support gpg2.

- Download virtualenv via PIP. This fixes an error caused by the PyPI
  restructuring

1.3b1 (2016-03-09)
==================
